--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1128,7 +1128,8 @@ img {
 .carousel-inner > .item > a > img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 350px;
+  object-fit: cover;
 }
 .img-rounded {
   border-radius: 6px;
